--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DIY Covid-19 Dashboard"
+    "**Author and Copyright Notice** *Based on UK Government [data](https://coronavirus.data.gov.uk/) published by [Public Health England](https://www.gov.uk/government/organisations/public-health-england).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# UK Covid-19 Dashboard"
    ]
   },
   {
@@ -29,6 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import library\n",
     "from IPython.display import clear_output\n",
     "import ipywidgets as wdg\n",
     "import pandas as pd\n",
@@ -50,31 +58,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load initial data from disk\n",
-    "\n",
-    "You should include \"canned\" data in ```.json``` files along with your dashboard. When the dashboard starts, it should load that data (the code below will be hidden when the dashboard is rendered by Voila)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# First step: Load initial data from disk\n",
+    "# Reading JSON file from a local file\n",
     "with open('raw_data.json','r') as f:\n",
     "    data = json.loads(f.read())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Wrangle the data\n",
-    "\n",
-    "The dashboard should contain the logic to wrangle the raw data into a ```DataFrame``` (or more than one, as required) that will be used for plotting. The wrangling code should be put into a function and called on the data from the JSON file (we'll need to call it again on any data downloaded from the API).  In this template, we just pretend we are wrangling ```rawdata``` and generate a dataframe with some random data"
    ]
   },
   {
@@ -83,146 +75,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Second step: Wrangle the data from JSON file into a DataFrame\n",
     "def wrangle_data(data):\n",
-    "    \"\"\" Parameters: rawdata - data from json file or API call. Returns a dataframe.\n",
-    "    Edit to include the code that wrangles the data, creates the dataframe and fills it in. \"\"\"\n",
-    "    # Flatten data\n",
+    "    \"\"\" Parameters: rawdata - data from json file or API call. Returns a dataframe.\"\"\"\n",
+    "    # Convert JSON file into a Pandas DataFrame\n",
+    "    # Flatten nested list and dict from JSON object\n",
     "    df = pd.json_normalize(data, record_path =['data'])\n",
     "    # Reverse the row and reset index \n",
     "    df = df.loc[::-1].reset_index(drop=True)\n",
-    "    # Fill in NAN value\n",
+    "    # Fill in NAN value with 0.0\n",
     "    df.fillna(0.0, inplace=True)\n",
+    "    \n",
     "    return df\n",
     "\n",
-    "# putting the wrangling code into a function allows you to call it again after refreshing the data through \n",
-    "# the API. You should call the function directly on the JSON data when the dashboard starts, by including \n",
-    "# the call in the cell as below:\n",
-    "df=wrangle_data(data) # df is the dataframe for plotting"
+    "# Wrap wrangling code into a function allows to call it again after refreshing the data through \n",
+    "# the API. \n",
+    "df = wrangle_data(data) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>totalCases</th>\n",
-       "      <th>totalDeaths</th>\n",
-       "      <th>totalAdmissions</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1017</th>\n",
-       "      <td>2022-11-13</td>\n",
-       "      <td>20228010</td>\n",
-       "      <td>172535.0</td>\n",
-       "      <td>902001.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1018</th>\n",
-       "      <td>2022-11-14</td>\n",
-       "      <td>20228010</td>\n",
-       "      <td>172617.0</td>\n",
-       "      <td>902523.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1019</th>\n",
-       "      <td>2022-11-15</td>\n",
-       "      <td>20228010</td>\n",
-       "      <td>172694.0</td>\n",
-       "      <td>903017.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1020</th>\n",
-       "      <td>2022-11-16</td>\n",
-       "      <td>20228010</td>\n",
-       "      <td>172740.0</td>\n",
-       "      <td>903559.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1021</th>\n",
-       "      <td>2022-11-17</td>\n",
-       "      <td>20248860</td>\n",
-       "      <td>172804.0</td>\n",
-       "      <td>904075.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            date  totalCases  totalDeaths  totalAdmissions\n",
-       "1017  2022-11-13    20228010     172535.0         902001.0\n",
-       "1018  2022-11-14    20228010     172617.0         902523.0\n",
-       "1019  2022-11-15    20228010     172694.0         903017.0\n",
-       "1020  2022-11-16    20228010     172740.0         903559.0\n",
-       "1021  2022-11-17    20248860     172804.0         904075.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Download current data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Give your users an option to refresh the dataset - a \"refresh\" button will do. The button callback should\n",
-    "* call the code that accesses the API and download some fresh raw data;\n",
-    "* wrangle that data into a dataframe and update the corresponding (global) variable for plotting;\n",
-    "* optionally: force a redraw of the graph and give the user some fredback.\n",
-    "\n",
-    "Once you get it to work, you may want to wrap your API call inside an exception handler, so that the user is informed, the \"canned\" data are not overwritten and nothing crashes if for any reason the server cannot be reached or data are not available.\n",
-    "\n",
-    "After you refresh the data, graphs will not update until the user interacts with a widget. You can trick ```iPywidgets``` into redrawing the graph by simulating interaction, as in the ```refresh_graph``` function we define in the Graph and Analysis section below.\n",
-    "\n",
-    "Clicking on the button below just generates some more random data and refreshes the graph. The button should read *Fetch Data*. If you see anything else, take a deep breath :)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# Place your API access code in this function. Do not call this function directly; it will be called by \n",
-    "# the button callback. \n",
+    "# Third step: Download the latest data by accessing the API.\n",
     "def access_api():\n",
-    "    \"\"\" Accesses the PHE API. Returns raw data in the same format as data loaded from the \"canned\" JSON file. \"\"\"\n",
+    "    \"\"\" Access the PHE API. Return raw data in the same format as data loaded from the \"canned\" JSON file. \"\"\"\n",
     "    england_only = [\n",
     "        'areaType=nation',\n",
     "        'areaName=England'\n",
@@ -248,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d65479b05044a849528f638f6646d87",
+       "model_id": "881d0a2d3ddf4f37836c399156e70753",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,32 +146,26 @@
     }
    ],
    "source": [
-    "# Printout from this function will be lost in Voila unless captured in an\n",
-    "# output widget - therefore, we give feedback to the user by changing the \n",
-    "# appearance of the button\n",
+    "# Forth Step: Set a button to refresh data and redraw the graph\n",
     "def api_button_callback(button):\n",
     "    \"\"\" Button callback - it must take the button as its parameter (unused in this case).\n",
     "    Accesses API, wrangles data, updates global variable df used for plotting. \"\"\"\n",
-    "    # Get fresh data from the API. If you have time, include some error handling\n",
-    "    # around this call.\n",
-    "    apidata=access_api()\n",
-    "    # wrangle the data and overwrite the dataframe for plotting\n",
+    "    # Get fresh data from the API. \n",
+    "    apidata = access_api()\n",
+    "    \n",
+    "    # Wrangle the data and overwrite the dataframe for plotting\n",
     "    global df\n",
-    "    df=wrangle_data(apidata)\n",
-    "    # the graph won't refresh until the user interacts with the widget.\n",
-    "    # this function simulates the interaction, see Graph and Analysis below.\n",
-    "    # you can omit this step in the first instance\n",
+    "    df = wrangle_data(apidata)\n",
+    "    \n",
+    "    # Redraw the graph with lastest data access from API\n",
     "    refresh_graph()\n",
-    "    # after all is done, you can switch the icon on the button to a \"check\" sign\n",
-    "    # and optionally disable the button - it won't be needed again. You can use icons\n",
-    "    # \"unlink\" or \"times\" and change the button text to \"Unavailable\" in case the \n",
-    "    # api call fails.\n",
+    "    \n",
+    "    # Change the status of the button\n",
     "    apibutton.icon=\"check\"\n",
-    "    # apibutton.disabled=True\n",
     "\n",
     "    \n",
     "apibutton=wdg.Button(\n",
-    "    description='REFRESH', # you may want to change this...\n",
+    "    description='REFRESH',\n",
     "    disabled=False,\n",
     "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
     "    tooltip=\"Keep calm and carry on\",\n",
@@ -300,37 +173,21 @@
     "    icon='rotate-right'\n",
     ")\n",
     "\n",
-    "# remember to register your button callback function with the button\n",
-    "apibutton.on_click(api_button_callback) # the name of your function inside these brackets\n",
+    "# Register button callback function with the button\n",
+    "apibutton.on_click(api_button_callback)\n",
     "\n",
-    "display(apibutton)\n",
-    "\n",
-    "# run all cells before clicking on this button"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Graphs and Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Include at least one graph with interactive controls, as well as some instructions for the user and/or comments on what the graph represents and how it should be explored (this example shows two random walks)"
+    "display(apibutton)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6110296e31bf476ca9b66e1e73bcfb60",
+       "model_id": "8e544855ce244badadb0c391afefed43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "719682e3744d4692a2aa223e19ea89bb",
+       "model_id": "0d4f069e79814bbaa0026313ade50536",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,10 +214,12 @@
     }
    ],
    "source": [
+    "# Fifth Step: Display the interactive graph\n",
+    "# Draw a bar graph with xaxis is date and yaxis is col.options\n",
     "def graph(graphcolumns):\n",
     "    plt.bar(df['date'], df[graphcolumns])\n",
-    "    plt.xticks(np.arange(50, 1031, 60), rotation=90)\n",
-    "    plt.xlim([1010, 1030])\n",
+    "    plt.xticks(np.arange(50, 1031, 60), rotation=90) # set xaxis tick\n",
+    "    # plt.xlim([1010, 1030]) # test for the refresh button\n",
     "    plt.show()\n",
     "    \n",
     "    \n",
@@ -372,9 +231,7 @@
     ")\n",
     "\n",
     "def refresh_graph():\n",
-    "    \"\"\" We change the value of the widget in order to force a redraw of the graph;\n",
-    "    this is useful when the data have been updated. This is a bit of a gimmick; it\n",
-    "    needs to be customised for one of your widgets. \"\"\"\n",
+    "    \"\"\" Change the value of the widget in order to force a redraw of the graph.\"\"\"\n",
     "    current=cols.value\n",
     "    if current==cols.options[0]:\n",
     "        other=cols.options[1]\n",
@@ -383,9 +240,9 @@
     "    else:\n",
     "        other=cols.options[0]\n",
     "    cols.value=other # forces the redraw\n",
-    "    cols.value=current # now we can change it back\n",
+    "    cols.value=current # now change it back\n",
     "    \n",
-    "# keep calling age_graph(graphcolumns=value_of_agecols); capture output in widget output    \n",
+    "# keep calling graph(graphcolumns=value_of_cols); capture output in widget output    \n",
     "output = wdg.interactive_output(graph, {'graphcolumns': cols})\n",
     "\n",
     "display(cols, output)"
@@ -398,13 +255,6 @@
     "## Deploying the dashboard\n",
     "\n",
     "Once your code is ready and you are satisfied with the appearance of the graphs, replace all the text boxes above with the explanations you would like a dashboard user to see. The next step is deploying the dashboard online - there are several [options](https://voila.readthedocs.io/en/stable/deploy.html) for this, we suggest deploying as a [Binder](https://mybinder.org/). This is basically the same technique that has been used to package this tutorial and to deploy this template dashboard. The instructions may seem a bit involved, but the actual steps are surprisingly easy - we will be going through them together during a live session. You will need an account on [GitHub](https://github.com/) for this - if you don't have one already, now it's the time to create it. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Author and Copyright Notice** Remember if you deploy this dashboard as a Binder it will be publicly accessible. Take credit for your work! Also acknowledge the data source: *Based on UK Government [data](https://coronavirus.data.gov.uk/) published by [Public Health England](https://www.gov.uk/government/organisations/public-health-england).*"
    ]
   }
  ],
