--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -25,9 +25,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a template for your DIY Covid Dashboard, to which you can add the code you developed in the previous notebooks. The dashboard will be displayed using [voila](https://voila.readthedocs.io/en/stable/index.html), a Python dashboarding tool that converts notebooks to standalone dashboards. Contrary to the other libraries we have seen, the ```voila``` package must be installed using *pip* or *conda* but it does not need to be imported - it rather acts at the level of the notebook server. Package ```voila``` is already installed on the EECS JupyterHub as well as in the binder - to install it locally, follow the [instructions](https://voila.readthedocs.io/en/stable/install.html) online.\n",
+    "## Development Process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This dashboard downloads and displays Covid data from [Public Health England](https://coronavirus.data.gov.uk).\n",
     "\n",
-    "Broadly speaking, Voila acts by **running all the cells in your notebook** when the dashboard is first loaded; it then hides all code cells and displays all markdown cells and any outputs, including widgets. However, the code is still there in the background and handles any interaction with the widgets. To view this dashboard template rendered in Voila click [here](https://mybinder.org/v2/gh/fsmeraldi/diy-covid19dash/main?urlpath=%2Fvoila%2Frender%2FDashboard.ipynb)."
+    "1. Install python SDK for PHE\n",
+    "2. Access data through web-based APIs\n",
+    "3. Retrieve JSON format file and store in local disk\n",
+    "4. Use Pandas library to build dataframe and use Matplotlib library to plot diagram\n",
+    "5. Use iPython Widgets to building a basic Graphical User Interface (GUI)\n",
+    "6. Use voila to display dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Choice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The diagram represents Date, TotalCases, TotalDeaths, TotalAdmissions in England from 2020-01-31 to 2022-12-01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dashboard Operation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- It allows user to select different display of the graph through a selection area.\n",
+    "- When a user cliks the refresh data button, it would then access the API from PHE to retrieve the latest data and redraw the grapgh."
    ]
   },
   {
@@ -52,6 +93,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# suppress warning for pyplot\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib inline\n",
     "# make figures larger\n",
     "plt.rcParams['figure.dpi'] = 100"
@@ -59,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "881d0a2d3ddf4f37836c399156e70753",
+       "model_id": "77d4c5a1f1fe4d1c80f6da564a4762c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,18 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e544855ce244badadb0c391afefed43",
+       "model_id": "29a0f25d184e40d282dde1d7ab056a06",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Overview: ', options=('totalCases', 'totalDeaths', 'totalAdmissions'), value='totalCases…"
+       "Select(description='Overview: ', options=('totalCases', 'totalDeaths', 'totalAdmissions'), value='totalCases')"
       ]
      },
      "metadata": {},
@@ -201,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d4f069e79814bbaa0026313ade50536",
+       "model_id": "c5591412afef4ff2821604d05caf1732",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,13 +269,20 @@
     "# Fifth Step: Display the interactive graph\n",
     "# Draw a bar graph with xaxis is date and yaxis is col.options\n",
     "def graph(graphcolumns):\n",
-    "    plt.bar(df['date'], df[graphcolumns])\n",
-    "    plt.xticks(np.arange(50, 1031, 60), rotation=90) # set xaxis tick\n",
+    "    plt.bar(df['date'], df[graphcolumns], color=\"gray\")\n",
+    "    plt.xticks(np.arange(0, 1031, 60), rotation=90) # set xaxis tick\n",
     "    # plt.xlim([1010, 1030]) # test for the refresh button\n",
+    "    plt.xlabel('Date') # set x label\n",
+    "    \n",
+    "    # set yaxis number format\n",
+    "    current_values = plt.gca().get_yticks()\n",
+    "    plt.gca().set_yticklabels(['{:,.0f}'.format(x) for x in current_values])\n",
+    "    \n",
+    "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
     "    \n",
-    "cols = wdg.Dropdown(\n",
+    "cols = wdg.Select(\n",
     "    options=['totalCases', 'totalDeaths', 'totalAdmissions'], # options available\n",
     "    value='totalCases', # initial value\n",
     "    description='Overview: ',\n",
