--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -313,7 +313,7 @@
    "source": [
     "## Deploying the dashboard\n",
     "\n",
-    "Once your code is ready and you are satisfied with the appearance of the graphs, replace all the text boxes above with the explanations you would like a dashboard user to see. The next step is deploying the dashboard online - there are several [options](https://voila.readthedocs.io/en/stable/deploy.html) for this, we suggest deploying as a [Binder](https://mybinder.org/). This is basically the same technique that has been used to package this tutorial and to deploy this template dashboard. The instructions may seem a bit involved, but the actual steps are surprisingly easy - we will be going through them together during a live session. You will need an account on [GitHub](https://github.com/) for this - if you don't have one already, now it's the time to create it. "
+    "This Dashboard uses Binder to deploy.[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/a88126451/UKCovid19-Dashboard/HEAD?labpath=voila%2Frender%2FDashboard.ipynb)"
    ]
   }
  ],
